Adjust layout and animtions to prevent an initial scroll jump

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -110,6 +110,7 @@ body {
 
 /* Smooth scrolling */
 html {
+  scroll-padding-top: 4rem;
   scroll-behavior: smooth;
 }
 
